Refactor documentation structure; update dependencies and improve code readability